--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+@keyframes progressBar {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0%;
+  }
+}
+
+.animate-progressBar {
+  animation: progressBar 6s linear forwards;
+}
